style.css
@import url('https://fonts.googleapis.com/css?family=Raleway|Roboto');
@import url('https://fonts.googleapis.com/css?family=Ubuntu');
@import url('https://fonts.googleapis.com/css?family=Raleway:400,800');

.panel{
  width: 100%;
  min-height: 100%;
  overflow: hidden;
  margin: 0;
}

@media screen and (max-width: 768px){
  body{
    overflow-x: hidden;
  }
}
/**************NAVBAR***********/
nav{
  min-height: 6%;
  position: absolute;
}

.navbar-default .navbar-nav>li>a{
  color: #000000;
  padding-bottom: 0px;
}

.navbar-default .navbar-nav>li>a:hover {
  text-decoration: none;
  border-bottom: 2px solid #b30000;
}

.navbar-default .navbar-nav>li>a:visited {
  text-decoration: none;
  border-bottom: 2px solid #b30000;
}

.navbar-nav li a {
  font-family: "Raleway", sans-serif;
  text-transform: uppercase;
  font-weight: bold;
  font-size: 18px !important;
  padding-top: 25px;
}

#navbarBrand{
  line-height: 60px;
}

#navbarLogo{
  float: left;
  display: block;
  line-height: 60px;
  vertical-align: middle;
}

/***********LANDING PAGE***********/
@media screen and (max-width: 768px){
  .panel.one h1{
    padding-top: 70%;
    font-size: 3.5em;
  }
}

@media screen and (min-width: 769px){
  .panel.one h1{
    font-size: 5.5em;
  }
}
.panel.one{
  position: relative;
  padding-top: 5%;
  background:
    linear-gradient(
      rgba(0, 0, 0, 0),
      rgba(0, 0, 0, 0.6)
    ),
    url("images/grouppic.jpg");
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

.title{
  color: white;
  font-family: 'Raleway', sans-serif;
  text-shadow: 2px 2px #000000;
  font-weight:900;
  padding-top: 30%;
}

#elite a{
  font-size:40px;
  text-decoration:none;
  color: #000000;
}

/***********ABOUT PAGE***********/
@media screen and (max-width: 768px){
  .panel.two p{
    font-size: 1.2em;
  }
}

@media screen and (min-width: 769px){
  .panel.two p{
    font-size: 1.5em;
  }
  .panel.two{
    min-height: 60% !important;
  }
}

.panel.two{
  background-color: #f9f9f9;
  min-height: 60%;
  /*background-color: #BC4966;
  /*background-color: #b30000;*/
  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
}

.panel.two h1, p{
  font-family: "Raleway", sans-serif;
  /*color: #ffffff;*/
  color: #000000;
}

#mission{
  font-family: "Raleway", sans-serif;
  text-align: left;
  text-indent: 50px;
  min-height: 10%;
}

.mission-block hr{
  border-color: #b30000;
  border-width: 2px;
  width: 40%;
}

.meetings-block{
  position: relative;
  /*background-size: 90% 70%;*/
  min-height: 50%;
  min-width: 50%;
}

.meetings-block img{
  opacity: 0.85;
}
/***********OFFICERS PAGE***********/
.panel.three{
  padding-top: 2%;
  padding-bottom: 5%;
  background-color: #e5e3e5;
}

.officers h1{
  color: #000000;
  font-family: "Raleway", sans-serif;
}

.officers{
  padding-bottom: 5%;
}

.panel.three hr{
  border-color: #b30000;
  border-width: 2px;
  width: 20%;
}

.panel.three h3{
  color: #000000;
  font-family: "Raleway", sans-serif;
}

@media screen and (max-width: 768px) {
    .panel.three h3{
      font-size:1.5em;
    }
    .panel.three p{
      font-size: 1.0em;

    }
    .panel.three i{
      font-size: 1.2em;
    }
}

.panel.three p{
  color: #000000;
  font-family: "Raleway", sans-serif;
}

.panel.three img{
  border: 3px solid black;
}

.panel.three a{
  color: #000000;
  padding-left: 3%;
  padding-right: 3%;
}

.panel.three a:hover{
  color: #b30000;
}


/***********EVENTS PAGE***********/
.panel.four{
  padding-top: 1em;
  padding-bottom: 1em;
  background-color: #f9f9f9;
  background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
}

.panel.four h1{
  font-family: "Raleway", sans-serif;
}

.panel.four hr{
  border-color: #b30000;
  border-width: 2px;
  width: 25%;
}

.iframe-container{
  position: relative;
  height: 0;
  padding-bottom: 50%;
}
.iframe-container iframe{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
/***********FOOTER***********/

.footer{
  min-height: 10%;
  background-color: #b30000;
  opacity: 0.7;
}

.footer h3{
  font-family: "Raleway", sans-serif;
  color: #ffffff;
}

.social-media a{
  color: #ffffff;
  padding-right: 1.2em;
}

.social-media a:hover{
  color: #5092fc;
}

.subscribe{
  font-family: "Raleway", sans-serif;
  color: white;
}

/**************BLOG HTML PAGE**************/

.coming-soon{
  padding-top: 60%;
  position: relative;
  color: #ffffff;
  font-family: "Raleway", sans-serif;
  font-size: 60px;
}

.blog{
  position: absolute;
  padding-top: 5%;
  min-height: 100%;
  background:
    linear-gradient(
      rgba(0, 0, 0, 0),
      rgba(255, 77, 77, 0.5)

    ),
    url("images/typing.jpg");
    background-position: center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/********BLOG PHP PAGE**********/

/*pagination*/
.paging{
  padding-left: 20%;
  padding-right: 50%;
}
  /*div{border: 1px solid blue;}

	a{border: 1px solid red;}

	i{border: 1px solid green;}

	span{border: 1px solid yellow;}

	img{border: 1px solid pink;}

	hr{border: 1px solid orange;}

	p{border: 1px solid purple;}

	ul{border: 1px solid gray;}

	li{border: 1px solid teal;}

	button{border: 1px solid brown;}

	svg{border: 1px solid turquoise;}

  form{border: 1px solid violet;}

  h1{border: 1px solid darkgray;}

  nav{border: 1px solid peach;}

*/

